added get users/me implementation(without jwt)
